NATTQA-ENV/force-app/main/default/objects/NATT_ProductInventoryItem__c/NATT_ProductInventoryItem__c.object-meta.xml
<CustomObject>
    <description>Contains current inventory levels at each warehouse for all B2B Commerce product items.</description>
    <label>Product Inventory Item</label>
    <nameField>
        <displayFormat>INV-{000000000}</displayFormat>
        <label>Product Inventory Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Inventory Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>