NATTQA-ENV/force-app/main/default/objects/NATT_ProductInventoryItem__c/fields/Copado_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Copado_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Copado External Id</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>