NATTQA-ENV/force-app/main/default/objects/NATT_ProductInventoryItem__c/fields/NATT_AvailabilityDate__c.field-meta.xml
<CustomField>
    <fullName>NATT_AvailabilityDate__c</fullName>
    <description>Date the product item is expected to be available at the specified warehouse.</description>
    <label>Availability Date</label>
    <type>Date</type>
</CustomField>