NATTQA-ENV/force-app/main/default/objects/NATT_ProductInventoryItem__c/fields/NATT_AvailableQuantity__c.field-meta.xml
<CustomField>
    <fullName>NATT_AvailableQuantity__c</fullName>
    <description>Currently available quantity of the product item at the specified warehouse. Expected whole number values.</description>
    <label>Available Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>