NATTQA-ENV/force-app/main/default/objects/NATT_ProductInventoryItem__c/fields/NATT_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>NATT_ExternalId__c</fullName>
    <description>NATT</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>