NATTQA-ENV/force-app/main/default/objects/NATT_ProductInventoryItem__c/fields/NATT_NSI_Availability__c.field-meta.xml
<CustomField>
    <fullName>NATT_NSI_Availability__c</fullName>
    <description>concatination of signal code and availablity</description>
    <formula>IF(ISPICKVAL(NATT_ProductItem__r.NATT_SignalCode__c , &quot;NSI&quot; ),&quot;NSI (&quot; &amp; Text(NATT_AvailableQuantity__c) &amp;&quot;)&quot;, &quot;&quot;)</formula>
    <label>NATT NSI Availability</label>
    <type>Text</type>
</CustomField>