NATTQA-ENV/force-app/main/default/objects/NATT_ProductInventoryItem__c/fields/NATT_P_N__c.field-meta.xml
<CustomField>
    <fullName>NATT_P_N__c</fullName>
    <formula>NATT_ProductItem__r.NATT_P_N__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P/N</label>
    <type>Text</type>
</CustomField>