NATTQA-ENV/force-app/main/default/objects/NATT_ProductInventoryItem__c/fields/NATT_ProductItem__c.field-meta.xml
<CustomField>
    <fullName>NATT_ProductItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product item to which the available quantity applies</description>
    <label>Product Item</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Inventory Items</relationshipLabel>
    <relationshipName>Product_Inventory_Items_del</relationshipName>
    <type>Lookup</type>
</CustomField>