NATTQA-ENV/force-app/main/default/objects/NATT_ProductInventoryItem__c/fields/NATT_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>NATT_Warehouse__c</fullName>
    <description>Warehouse containing the available quantity of the product item</description>
    <label>Warehouse</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANA</fullName>
            </value>
            <value>
                <fullName>BNA</fullName>
            </value>
            <value>
                <fullName>CHI</fullName>
            </value>
            <value>
                <fullName>PAN</fullName>
            </value>
            <value>
                <fullName>TES</fullName>
            </value>
            <value>
                <fullName>ATL</fullName>
            </value>
            <value>
                <fullName>MEX</fullName>
            </value>
            <value>
                <fullName>MIA</fullName>
            </value>
            <value>
                <fullName>CTB01</fullName>
            </value>
            <value>
                <fullName>CTB02</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>