NATTQA-ENV/force-app/main/default/objects/NATT_ProductInventoryItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NATT_P_N__c</columns>
    <columns>NATT_ProductItem__c</columns>
    <columns>NATT_Warehouse__c</columns>
    <columns>NATT_AvailableQuantity__c</columns>
    <columns>NATT_AvailabilityDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>