NATTQA-ENV/force-app/main/default/objects/NATT_ProductInventoryItem__c/listViews/Available_Items.listView-meta.xml
<ListView>
    <fullName>Available_Items</fullName>
    <columns>NAME</columns>
    <columns>NATT_ProductItem__c</columns>
    <columns>NATT_Warehouse__c</columns>
    <columns>NATT_AvailableQuantity__c</columns>
    <columns>NATT_AvailabilityDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NATT_AvailableQuantity__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>NATT_Warehouse__c</field>
        <operation>equals</operation>
        <value>BNA</value>
    </filters>
    <label>Available Items BNA</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>